# Legio-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  premake5.lua
include/Legio/: Engine.h  LegioCore.h  ServiceLocator.h
include/Legio/application/: EntryPoint.h
include/Legio/editor/: Editor.h
include/Legio/platform/: Application.h  Clock.h  Input.h  Log.h  Window.h
include/Legio/rendering/: LGCamera.h  Primitives.h  Renderer.h
shaders/: ModelFragment.glsl  ModelVertex.glsl  fragment.glsl  lightFragment.glsl  lightVertex.glsl  multipleLightsFragment.glsl  sourceLightCubeVertex.glsl  vertex.glsl
src/: Engine.cpp
src/editor/: Editor.cpp
src/editor/widgets/: Viewport.cpp
src/platform/: Application.cpp  Clock.cpp  EngineWindow.cpp  EngineWindow.h  GLFWwindow.cpp  GLFWwindow.h  Log.cpp  WindowsInput.cpp  WindowsInput.h
src/rendering/: LGCamera.cpp
src/rendering/OpenGl/: OpenGL_Buffer.cpp  OpenGL_Buffer.h  OpenGL_Mesh.cpp  OpenGL_Mesh.h  OpenGL_Model.cpp  OpenGL_Model.h  OpenGL_Renderer.cpp  OpenGL_Renderer.h  OpenGL_Shader.cpp  OpenGL_Shader.h  OpenGL_Texture.cpp  OpenGL_Texture.h  OpenGL_Vertex.cpp  OpenGL_Vertex.h  OpenGl_FrameBuffer.cpp  OpenGl_FrameBuffer.h
src/rendering/vulkan/: VKBuffer.cpp  VKBuffer.h  VKCamera.cpp  VKCamera.h  VKDevice.cpp  VKDevice.h  VKGameObject.cpp  VKGameObject.h  VKModel.cpp  VKModel.h  VKPipeline.cpp  VKPipeline.h  VKRenderer.cpp  VKRenderer.h  VKSwapChain.cpp  VKSwapChain.h  VKUtils.h  Vulkan_Device.cpp  Vulkan_Device.h  Vulkan_GameObject.cpp  Vulkan_GameObject.h  Vulkan_Implementation.h  Vulkan_Model.cpp  (+9 more)
(+15 files in other folders)
